2004-09-08  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Removed unuseful asserts.

2004-09-08  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented SCHEMA_AGE.

	* gnomemeeting.schemas.in.in: Removed key to hide status bar.

	* lib/gtk_menu_extensions.c, lib/gtk_menu_extensions.h: Added menu
	extensions.

	* src/chat_window.cpp, src/common.h, src/config.cpp, src/endpoint.cpp,
	src/gnomemeeting.cpp, src/gnomemeeting.h, src/lid.cpp, 
	src/main_window.cpp, src/main_window.h, src/tools.cpp, src/tools.h,
	src/tray.cpp, src/tray.h, src/urlhandler.cpp: API Changes, removed
	references to GmWindow to make it private. Make menu updates from
	functions on objects where the menus belong to.

2004-09-07  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp, src/endpoint.h, src/main_window.cpp, 
	src/main_window.h, src/tray.cpp, src/tray.h, src/urlhandler.cpp:
	More cleanups.

2004-09-06  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp, src/main_window.cpp, src/main_window.h: Only show
	the dialog, do not run it.

2004-09-06  Damien Sandras  <dsandras@gnome.org>

	* src/bonobo_component.cpp, src/callbacks.cpp, src/endpoint.cpp,
	src/gnomemeeting.cpp, src/gnomemeeting.h, src/lid.cpp, 
	src/main_window.cpp, src/main_window.h, src/misc.cpp, src/misc.h, 
	src/tray.cpp: Added function to get and set the URL in the URL
	bar. Modified GnomeMeeting Connect and Disconnect update the URL
	part of the UI and can be used everywhere else to call somebody,
	answer a call or clear a call.

2004-09-04  Damien Sandras  <dsandras@gnome.org>

	* gnomemeeting.desktop.in: Applied patch from Stephane Loeuillet.

	* src/addressbook_window.cpp: Added patch from Alessio Dessi.

2004-09-01  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp, src/gatekeeper.cpp, src/gnomemeeting.cpp, 
	src/ils.cpp, src/lid.cpp, src/main_window.cpp, src/main_window.h,
	src/misc.cpp, src/misc.h, src/urlhandler.cpp: More GMObjectification.
