@@ -1,5 +1,9 @@
 2004-09-08  Damien Sandras  <dsandras@gnome.org>
 
+	* src/main_window.cpp: Fixed local video pause.
+
+2004-09-08  Damien Sandras  <dsandras@gnome.org>
+
 	* src/endpoint.cpp: Removed unuseful asserts.
 
 2004-09-08  Damien Sandras  <dsandras@gnome.org>
